--- a/SQL/Joining Data in SQL/takeaways.ipynb
+++ b/SQL/Joining Data in SQL/takeaways.ipynb
@@ -66,15 +66,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outer Joins : Left, Right, Outer JOIN"
+    "### LEFT OUTER JOIN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
-    "<center><img src=\"images/02.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RIGHT OUTER JOIN\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FULL OUTER JOIN\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center><img src=\"images/02.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
@@ -82,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross Join : All possible combinations\n"
+    "### CROSS JOIN\n"
    ]
   },
   {
@@ -96,6 +122,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SET operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UNION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UNION ALL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### INTERSECT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.05.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXCEPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.06.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Summary"
    ]
   },
@@ -103,11 +212,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Left Join : Keep everything from Left table, keep the value from right table if matches, otherwise null\n",
-    "- Right Join : Keep everything from Right table, keep the value from left table if matches, otherwise null\n",
-    "- Full Join : Keep everything from both left and right tables, if values do not matche, make them null (Union of Left and Right join)\n",
-    "- Cross Join : All possible combination between left and right table\n",
-    "- Self Join : Make the same table appear as both left table and right table and then perform INNER JOIN on it using aliases (Remember to remove duplicate entries with `AND` after `ON` eg : `ON ... AND left.userID <> right.userID` )"
+    "- `JOIN` Operations: stacks tables horizontally (number of columns increase)\n",
+    "    - `LEFT JOIN` : Keep everything from Left table, keep the value from right table if matches, otherwise null\n",
+    "    - `RIGHT JOIN` : Keep everything from Right table, keep the value from left table if matches, otherwise null\n",
+    "    - `FULL JOIN` : Keep everything from both left and right tables, if values do not matche, make them null (Union of Left and Right join)\n",
+    "    - `CROSS JOIN` : All possible combination between left and right table\n",
+    "    - Self Join : Make the same table appear as both left table and right table and then perform INNER JOIN on it using aliases (Remember to remove duplicate entries with `AND` after `ON` eg : `ON ... AND left.userID <> right.userID` )\n",
+    "- `SET` Operations : stacks tables vertically (number of rows increase)\n",
+    "    - `UNION` : All Results are returned without duplicates\n",
+    "    - `UNION ALL` : All Results are returned with duplicates\n",
+    "    - `INTERSECT` : Only results where both fields match are returned \n",
+    "    - `EXCEPT` : Only records from one table that is not present in other table\n",
+    "- "
    ]
   },
   {
