Chapter 3 : Fine-tuning your XGBoost model

--- a/Python/Extreme Gradient Boosting with XGBoost/takeaways.ipynb
+++ b/Python/Extreme Gradient Boosting with XGBoost/takeaways.ipynb
@@ -88,6 +88,14 @@
     "y_pred_cv = cross_val_predict(xgb_model, X_test, y=None, cv=cv)\n",
     "accuracy_final = accuracy_score(y_test, y_pred_cv)\n",
     "\n",
+    "# GridSearch / RandomizedSearch (HYPERPARAMETER TUNING)\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "param_grid = {'learning_rate': np.arange(0.05,1.05,.05), 'n_estimators': [200], 'subsample': np.arange(0.05,1.05,.05)}\n",
+    "gbm = xgb.XGBRegressor()\n",
+    "tuning_models = Grid_RandomizedSearchCV(estimator=gbm, param_distributions=param_grid, n_iter=25, \n",
+    "        scoring='neg_mean_squared_error', cv=4, verbose=1)\n",
+    "tuning_models.fit(X, y)\n",
+    "tuning_models.best_params_ # See the parameters that give the best results\n",
     "# Visualize tree\n",
     "import os\n",
     "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files/Graphviz/bin' ### MAKE SURE TO INSTALL GRAPHVIZ AND ADD THE INSTALLATION PATH\n",
