--- a/Python/Extreme Gradient Boosting with XGBoost/takeaways.ipynb
+++ b/Python/Extreme Gradient Boosting with XGBoost/takeaways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 1"
+    "# Chapter 1 and Chapter 2"
    ]
   },
   {
@@ -108,13 +108,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 2"
+    "# Chapter 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Grid Search and Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.model_selection import cross_val_score, cross_val_predict, KFold\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from sklearn.metrics import mean_absolute_error, make_scorer\n",
+    "\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "# splits = kf.split(X) # See how they are splitted, each split contains index of training and validation\n",
+    "# r-squared results for 5-fold cross validation score  \n",
+    "mae_scorer = make_scorer(mean_absolute_error)\n",
+    "scores = cross_val_score(your_model, X, y, cv=kf, scoring=mae_scorer)  # a list of error terms\n",
+    "avg_score = np.mean(scores)\n",
+    "# predicted_y results for 5-fold cross validation prediction\n",
+    "predicted_y = cross_val_predict(your_model, X, y, cv=5) # a list of predictions\n",
+    "avg_predicted_y = np.mean(predicted_y)\n",
+    "\n",
+    "### example of ridge regression with grid search with k-fold cross validation\n",
+    "param_grid = {\"alpha\": np.arange(0.0001, 1, 10), \"solver\": [\"sag\", \"lsqr\"]}\n",
+    "ridge = Ridge()\n",
+    "ridge_cv = GridSearchCV(ridge, param_grid, cv=kf)\n",
+    "ridge_cv2 = RandomizedSearchCV(ridge, param_grid, cv=kf, n_iter=2)\n",
+    "ridge_cv.fit(X_train, y_train)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "\n",
+    "X = df.drop(\"target\", axis = 1).values\n",
+    "y = df[\"target\"].values\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=21)\n",
+    "\n",
+    "# Define sequential stages of your model (Only the last step should contain model, others are transformers)\n",
+    "steps = [('scale',StandardScaler()), \n",
+    "         ('knn', KNeighborsClassifier())]\n",
+    "# Construct the pipeline\n",
+    "pipeline = Pipeline(steps)\n",
+    "\n",
+    "# Perform cross validation on pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import make_scorer, mean_squared_error\n",
+    "custom_scorer = make_scorer(mean_squared_error)\n",
+    "scores = cross_val_score(pipeline,X_train,y_train, scoring= custom_scorer,cv=10) # \"neg_mean_squared_error\"\n",
+    "\n",
+    "# Perform gridsearch on pipeline\n",
+    "parameters = {\"knn__n_neighbors\": np.arange(1, 50)} # Use format: step-name + __ + parameter_name \n",
+    "cv = GridSearchCV(pipeline, param_grid=parameters)\n",
+    "# Train\n",
+    "cv.fit(X_train, y_train)\n",
+    "# Predict\n",
+    "y_pred = cv.predict(X_test)\n",
+    "\n",
+    "### You can break down the pipeline and add the results of each step in the output\n",
+    "# Create a feature union of transformers : allows you to concatenate the results of multiple transformer objects along the second axis\n",
+    "combined_features = FeatureUnion([\n",
+    "    ('scaler', scaler),\n",
+    "    ('poly_features', poly_features),\n",
+    "    ('pca', pca)\n",
+    "])\n",
+    "\n",
+    "# Define the classifier\n",
+    "classifier = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Create a pipeline with FeatureUnion and the classifier\n",
+    "pipeline = Pipeline([\n",
+    "    ('features', combined_features),\n",
+    "    ('classifier', classifier)\n",
+    "])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-hot encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Binary Encoding\n",
+    "df[\"cat_col\"] = df[\"cat_col\"].apply(lambda val: 1 if val == \"y\" else 0)\n",
+    "\n",
+    "# One-hot-encoding on categorical variable\n",
+    "df_onehot = pd.get_dummies(df, columns=['cat'], prefix='C')\n",
+    "df_dummy = pd.get_dummies(df, columns=['cat'], drop_first=True, prefix='C')\n",
+    "\n",
+    "# Alternative approach-2\n",
+    "from sklearn import preprocessing\n",
+    "encoder = preprocessing.OneHotEncoder()\n",
+    "onehot_transformed = encoder.fit_transform(df['cat_col'].values.reshape(-1,1))\n",
+    "# Convert into dataframe\n",
+    "onehot_df = pd.DataFrame(onehot_transformed.toarray())\n",
+    "# Add the encoded columns with original dataset, \n",
+    "df = pd.concat([df, onehot_df], axis=1)\n",
+    "# Drop the original column that you used for encoding \n",
+    "df = df.drop('cat_col', axis=1)\n",
+    "\n",
+    "# Label encoding : Turning string labels into numeric values\n",
+    "from sklearn import preprocessing\n",
+    "encoder_lvl = preprocessing.LabelEncoder()\n",
+    "# Specify the unique categories in the column to apply one-hot encoding\n",
+    "encoder_lvl.fit([ 'LOW', 'NORMAL', 'HIGH'])\n",
+    "# Apply one hot encoding on the third column of the dataset\n",
+    "df[:,2] = encoder_lvl.transform(df[:,2]) \n",
+    "\n",
+    "# Alternative approach : DictVectorizer\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "df_dict = df.to_dict(\"records\") # Convert df into a list of dictionary\n",
+    "dv = DictVectorizer(sparse = False)\n",
+    "df_encoded = dv.fit_transform(df_dict)\n",
+    "print(df_encoded[:5,:]) # Print first five rows\n",
+    "# Print the vocabulary (how the features are mapped to columns in the resulting matrix.)\n",
+    "print(dv.vocabulary_)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
