Chapter 2 : Basic Time Series Metrics & Resampling

--- a/Python/Manipulating Time Series Data in Python/takeaways.ipynb
+++ b/Python/Manipulating Time Series Data in Python/takeaways.ipynb
@@ -38,17 +38,27 @@
     "period.asfreq('D') # convert to daily\n",
     "period.to_timestamp() # Convert period to timestamp\n",
     "timestamp_1.to_period('M') # Convert timestamp to period\n",
-    "\n",
+    "# Add missing time values / change frequency (can be alternative to .asfreq)\n",
+    "monthly_dates = pd.date_range(start, end, freq=\"M\")\n",
+    "monthly = pd.Series(data=df[\"x\"], index=monthly_dates)\n",
+    "weekly_dates = pd.date_range(start, end, freq=\"W\")\n",
+    "monthly.reindex(weekly_dates)\n",
     "# Create time series\n",
     "t_series = pd.date_range(start='2017-1-1', periods=12, freq='M')\n",
     "df.set_index('date_col', inplace=True) # setting the time series as index of dataframe\n",
-    "# Sampling date (Make sure the index of dataframe is time series)\n",
-    "timed_df.asfreq('B') # Change calendar day to business day frequency\n",
-    "timed_df.asfreq('D').head() # Up-sampling (higher values, more missing values)\n",
-    "timed_df.asfreq('M').head() # Down-sampling (less values, aggregated values)\n",
-    "timed_df.resample('M', on = 'date_col')['col1'].mean()\n",
-    "# Resampling count\n",
-    "df.resample('M', on = 'date_col').size()\n",
+    "# Sampling date (Make sure the index of dataframe is time series), try to always use .resample\n",
+    "timed_df.resample('DS').asfreq().agg(['mean']) # Down-sampling to day start using .resample and mean aggregation\n",
+    "timed_df.resample('1H').interpolate(method='linear') # Up-sampling with .resample, and fill missing values linearly\n",
+    "timed_df.asfreq('1H', method='ffill') # Up-sampling with .asfreq and fill missing values with forward fill\n",
+    "timed_df.asfreq(freq='3H', method='linear') # Down-sampling (less values, aggregated values, linearly interpolated)\n",
+    "timed_df.resample('M', on = 'date_col')['col1'].mean() # Standard syntax\n",
+    "resampled_df.size() # Resampling count\n",
+    "\n",
+    "# Normalization and comparison of time series data\n",
+    "first_row = time_df.iloc[0]\n",
+    "normalized = time_df.div(first_row).mul(100)\n",
+    "comparison_df = normalized.sub(df['normalized_benchmark_series'], axis=0)\n",
+    "\n",
     "# Add timezone in a datetime column\n",
     "df['date_col'] = df['date_col'].dt.tz_localize('America/New_York', ambiguous='NaT')\n",
     "# Convert to another timezone\n",
@@ -57,11 +67,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/01.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
   }
  ],
  "metadata": {
