Chapter 3 : Window Functions: Rolling & Expanding Metrics

--- a/Python/Manipulating Time Series Data in Python/takeaways.ipynb
+++ b/Python/Manipulating Time Series Data in Python/takeaways.ipynb
@@ -63,6 +63,22 @@
     "df['date_col'] = df['date_col'].dt.tz_localize('America/New_York', ambiguous='NaT')\n",
     "# Convert to another timezone\n",
     "df['date_col'] = df['date_col'].dt.tz_convert('Europe/London')\n",
+    "\n",
+    "# Window functions:\n",
+    "time_df.rolling(window='30D').agg(['mean', 'std']) # moving range / rolling window\n",
+    "time_df.expanding().agg(['mean', 'sum']) # expanding range / cumulative expanding window\n",
+    "\n",
+    "# Running rate of return\n",
+    "row_gain_series = data.SP500.pct_change() # period return\n",
+    "real_val_after_gain = row_gain_series.add(1)\n",
+    "cumulative_return = real_val_after_gain.cumprod().sub(1)\n",
+    "percentage_cum_gain = cumulative_return.mul(100).\n",
+    "# Alternative : Use a function to apply change in each row of the column\n",
+    "def cumulative_return_func(row):\n",
+    "    return np.prod(row + 1) - 1\n",
+    "row_gain_series = time_df[\"close\"].pct_change() # period return\n",
+    "cumulative_return = row_gain_series.rolling('30D').apply(cumulative_return_func)\n",
+    "percentage_cum_gain = cumulative_return.mul(100).\n",
     "```"
    ]
   },
@@ -79,6 +95,25 @@
    "source": [
     "<center><img src=\"images/01.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
