--- a/Python/Manipulating Time Series Data in Python/takeaways.ipynb
+++ b/Python/Manipulating Time Series Data in Python/takeaways.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Time Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
     "# Parsing date\n",
     "df = pd.read_csv('filename.csv', parse_dates = ['date_col1', 'date_col2'], index_col='date_col3') # during import\n",
@@ -79,6 +86,49 @@
     "row_gain_series = time_df[\"close\"].pct_change() # period return\n",
     "cumulative_return = row_gain_series.rolling('30D').apply(cumulative_return_func)\n",
     "percentage_cum_gain = cumulative_return.mul(100).\n",
+    "\n",
+    "# Weighted index\n",
+    "# company_capital = no_shares * stock_price\n",
+    "# total_market_capital_worldwide = sum(company_capital)\n",
+    "# company_weight = company_capital / total_market_capital_worldwide\n",
+    "# company_index = company_weight * company_pct_change\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Time Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('filename.csv', parse_dates=[\"date_col\"], index_col=\"date_col\")\n",
+    "df = df[\"1960-01-01\":\"1969-12-31\"] # Subsetting for smaller portion\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Multiple time series on same plot\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(df.index, df['col1'], color='red')\n",
+    "ax.tick_params('y', colors='red')\n",
+    "ax.set_xlabel('Time Axis')\n",
+    "ax.set_ylabel('First Y Axis')\n",
+    "\n",
+    "ax2 = ax.twinx() # Same x axis, but separate y axis\n",
+    "ax2.plot(df.index, df['col2'], color='blue')\n",
+    "ax2.tick_params('y', colors='blue')\n",
+    "ax2.set_ylabel('Second Y Axis')\n",
+    "\n",
+    "ax2.annotate(\"Annotation text\", xy=(pd.Timestamp('2015-10-06'), 1),\n",
+    "        xytext=(pd.Timestamp('2008-10-06'), -0.2),\n",
+    "        arrowprops={\"arrowstyle\":\"->\", \"color\":\"gray\"})\n",
+    "\n",
+    "plt.show()\n",
     "```"
    ]
   },
@@ -113,7 +163,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sorting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "cars = ['Ford', 'BMW', 'Volvo']\n",
+    "\n",
+    "cars.sort(reverse=True)\n",
+    "# For a dataframe\n",
+    "sorted_df = df.sort_values(by=['cat_col', 'num_col'], ascending=[True, False])\n",
+    "each_group_top = sorted_df.groupby(['cat_col'])['num_col'].head(1) # top row of each category column\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
