Chapter 2 : Short and Simple Subqueries

--- a/SQL/Data Manipulation in SQL/takeaways.ipynb
+++ b/SQL/Data Manipulation in SQL/takeaways.ipynb
@@ -57,6 +57,13 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
+    "def execute(query, database_path='dataset/database.sqlite'):\n",
+    "    connection = sqlite3.connect(database_path)\n",
+    "    result = connection.execute(query).fetchall()\n",
+    "    column_names = [description[0] for description in connection.execute(query).description]\n",
+    "    df = pd.DataFrame(result, columns=column_names)\n",
+    "    connection.close()\n",
+    "    return df\n",
     "def get_table_names(database_path='dataset/database.sqlite'):\n",
     "    connection = sqlite3.connect(database_path)\n",
     "    query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
@@ -68,6 +75,10 @@
     "# Get and print all table names in the database\n",
     "tables = get_table_names()\n",
     "print(\"Tables in the database:\", tables)\n",
+    "from pandasql import sqldf\n",
+    "\n",
+    "# Create helper function for easier query execution\n",
+    "execute_df = lambda q: sqldf(q, globals())\n",
     "\n",
     "```"
    ]
@@ -98,6 +109,73 @@
     "GROUP BY season;\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sub-query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Simple query with two tables\n",
+    "SELECT left_table.colx, right_table.coly\n",
+    "FROM left_table, right_table\n",
+    "WHERE left_table.common_col = right_table.common_col\n",
+    "\n",
+    "-- Subquery inside FROM (turning a query into virtual table using alias, evolving from the previous query)\n",
+    "SELECT left_table.colx, right_table.coly\n",
+    "FROM left_table,\n",
+    "    (SELECT coly, colz, common_col          -- subquery start\n",
+    "    FROM another_table) AS right_table      -- subquery end\n",
+    "WHERE left_table.common_col = right_table.common_col\n",
+    "ORDER BY continent;\n",
+    "\n",
+    "\n",
+    "-- Subquery inside WHERE (You use it in Semi join / Anti Join)\n",
+    "SELECT left_table.*\n",
+    "FROM left_table\n",
+    "WHERE left_table.some_col <NOT> IN  -- Using \"NOT\" will result in Anti join\n",
+    "        (                           -- subquery start\n",
+    "            SELECT another_col      \n",
+    "            FROM right_table\n",
+    "        );                          -- subquery end\n",
+    "\n",
+    "-- Subquery inside SELECT (REMEMBER: This query should only produce a single value)\n",
+    "SELECT\n",
+    "    outer_table.id,\n",
+    "    (SELECT COUNT(*) FROM inner_table WHERE outer_table.id = inner_table.id) AS new_col_1,              -- subquery 1\n",
+    "    (SELECT AVG(some_column) FROM inner_table WHERE outer_table.id = inner_table.id) AS new_col_2,      -- subquery 2\n",
+    "    (SELECT MAX(another_column) FROM inner_table WHERE outer_table.id = inner_table.id) AS new_col_3    -- subquery 3\n",
+    "FROM\n",
+    "    outer_table;\n",
+    "\n",
+    "-- Using the WITH keyword (creating multiple virtual tables)\n",
+    "WITH\n",
+    "result_table1 AS (\n",
+    "    SELECT col1, col2 FROM t1),             -- subquery 1\n",
+    "result_table2 AS (\n",
+    "    SELECT colx, coly FROM t2)              -- subquery 2\n",
+    "SELECT * FROM result_table1, result_table2\n",
+    "WHERE result_table1.col1 <= result_table2.col2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
