Chapter 3 : Correlated Queries, Nested Queries, and Common Table Expressions

--- a/SQL/Data Manipulation in SQL/takeaways.ipynb
+++ b/SQL/Data Manipulation in SQL/takeaways.ipynb
@@ -175,6 +175,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlated Query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- DISCOURAGED : inner table is evaluated in loops, once for each row of the outer_table\n",
+    "\n",
+    "-- Example 1\n",
+    "SELECT id, name, salary \n",
+    "FROM outer_table\n",
+    "WHERE\n",
+    "  salary > ( SELECT AVG(salary) \n",
+    "  FROM inner_table\n",
+    "  WHERE inner_table.department_id = outer_table.department_id );\n",
+    "\n",
+    "-- Example 2\n",
+    "SELECT\n",
+    "  outer_table.id,\n",
+    "  outer_table.name,\n",
+    "  outer_table.department,\n",
+    "  (SELECT inner_table.salary FROM inner_table WHERE inner_table.employee_id = outer_table.id) AS employee_salary\n",
+    "FROM\n",
+    "  outer_table;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
