Chapter 4 : Window Functions

--- a/SQL/Data Manipulation in SQL/takeaways.ipynb
+++ b/SQL/Data Manipulation in SQL/takeaways.ipynb
@@ -215,7 +215,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Window Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT\n",
+    "col1,\n",
+    "AVG(col2 + col3) \n",
+    "    OVER(PARTITION BY cat_col1, cat_col2 ORDER BY col2 DESC ROWS BETWEEN <start> AND <finish> ) AS partitioned_avg\n",
+    "FROM table;\n",
+    "-- <start> : n PRECEDING, UNBOUNDED PRECEDING, CURRENT ROW (n is an integer)\n",
+    "-- <finish> : n FOLLOWING, UNBOUNDED FOLLOWING, CURRENT ROW (n is an integer)\n",
+    "-- PARTITION : resets for every new categorical value in the column\n",
+    "-- ROWS BETWEEN <start> AND <finish> : Window size\n",
+    "-- Some Other window functions : ROW_NUMBER(), DENSE_RANK(), NTILE(n), LEAD(col_name), LAG(col_name), SUM(), MIN(), MAX() etc\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
