Chapter 3 : Autoregressive (AR) Models

--- a/Python/Time Series Analysis in Python/takeaways.ipynb
+++ b/Python/Time Series Analysis in Python/takeaways.ipynb
@@ -58,7 +58,20 @@
     "    - eg: white noise is stationary. reason : mean, variance and auto-correlation of 100 data is same as 1000 data points\n",
     "    - non-stationary to stationary : may require several transformations like:\n",
     "        1. log transformation\n",
-    "        2. take the difference between current and a lagged version of itself (the right lag = look at acf graph)"
+    "        2. take the difference between current and a lagged version of itself (the right lag = look at acf graph)\n",
+    "    - Regression model:\n",
+    "        1. AR model : \n",
+    "            - Theory : The next value should retain some information from the previous value\n",
+    "            - todays value = mean + co-efficient * yesterday's value + error (y = mx + c)\n",
+    "            - co-efficient = phi. Negative phi = mean reversion, positive phi = momentum\n",
+    "            - phi = 0 for random walk (high autocorrelation) , phi = 1 for white noise (no autocorrelation) , -1 < phi < +1 for stationary series\n",
+    "            - autocorrelation decays exponentially at a rate of phi\n",
+    "        1. MA model : todays value = mean + co-efficient * yesterday's value + error\n",
+    "            - todays value = mean + co-efficient * yesterday's value + error (y = mx + c)\n",
+    "- Partial auto-correlation : \n",
+    "    - incremental benefit of adding another lag\n",
+    "    - quantifies how significance adding n-th lag is when there is already (n-1)th lag\n",
+    "- Information Criteria : adjusts penalties on number of parameters in the model. The best model has least AIC or/and BIC model among the peers."
    ]
   },
   {
@@ -68,16 +81,44 @@
     "```\n",
     "\n",
     "df['num_col'].autocorr() # autocorrelation value\n",
-    "from statsmodels.graphics.tsaplots import plot_acf\n",
+    "# Plot ACF and PACF graph\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "plot_acf(df['num_col'], lags= 20, alpha=0.05) # alpha = 1 - confidence interval\n",
+    "plot_pacf(df['num_col'], lags= 20, alpha=0.05)\n",
     "from statsmodels.tsa.stattools import acf\n",
     "acf(df['num_col']) # See acf values\n",
     "# White noise\n",
     "import numpy as np\n",
     "noise = np.random.normal(loc=0, scale=1, size=500)\n",
-    "# Dickey Fuller test\n",
+    "# Dickey Fuller test for random walk\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "adfuller(df['num_col'])\n",
+    "# Pure AR Series generation\n",
+    "from statsmodels.tsa.arima_process import ArmaProcess\n",
+    "phi = 0.9\n",
+    "ar = np.array([1, -phi])\n",
+    "ma = np.array([1])\n",
+    "AR_object = ArmaProcess(ar, ma)\n",
+    "simulated_data = AR_object.generate_sample(nsample=1000)\n",
+    "plt.plot(simulated_data)\n",
+    "# ARIMA modeling \n",
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "model = ARIMA(data, order=(1,0,0)) # (AR, diff, MA)\n",
+    "result = model.fit()\n",
+    "forecast = result.get_forecast(steps=50) # Forecast next 50 values\n",
+    "print(result.summary())\n",
+    "print(result.params) # Returns constant meu, and co-efficient phi\n",
+    "print(result.aic, result.bic) # AIC and BIC values of the model\n",
+    "# Plotting forecast\n",
+    "from statsmodels.graphics.tsaplots import plot_predict\n",
+    "fig, ax = plt.subplots()\n",
+    "data.plot(ax=ax)\n",
+    "plot_predict(result, start='2012-09-27', end='2012-10-06', alpha=0.05, ax=ax)\n",
+    "plt.show()\n",
+    "# Visualize best model : AR or MA values on X axis and AIC, BIC on Y axis\n",
+    "plt.plot(ar_values, aic_values, label='AIC', marker='o')\n",
+    "plt.plot(ar_values, bic_values, label='BIC', marker='o')\n",
+    "\n",
     "```"
    ]
   },
@@ -192,6 +233,69 @@
     "<center><img src=\"images/02.09.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
     "<center><img src=\"images/02.10.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
     "<center><img src=\"images/02.11.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AR series with different phi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of phi on Autocorrelation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AR model with multiple lags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PACF of AR with different lags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
   {
