Chapter 4 : Moving Average (MA) and ARMA Models

--- a/Python/Time Series Analysis in Python/takeaways.ipynb
+++ b/Python/Time Series Analysis in Python/takeaways.ipynb
@@ -54,24 +54,38 @@
     "    - Weak stationarity : mean, variance and autocorrelation of data are time invariant\n",
     "    - stationary data is easy to model due to less number of parameters\n",
     "    - non-stationary data is hard to model due to large number of parameters (new parameters found for each point in time)\n",
-    "    - eg: stock price is non-stationary. reason : price of today will differ from price of 10 years into the future\n",
+    "    - eg: stock price (random walk) is non-stationary. reason : price of today will differ from price of 10 years into the future\n",
     "    - eg: white noise is stationary. reason : mean, variance and auto-correlation of 100 data is same as 1000 data points\n",
     "    - non-stationary to stationary : may require several transformations like:\n",
     "        1. log transformation\n",
     "        2. take the difference between current and a lagged version of itself (the right lag = look at acf graph)\n",
     "    - Regression model:\n",
     "        1. AR model : \n",
-    "            - Theory : The next value should retain some information from the previous value\n",
-    "            - todays value = mean + co-efficient * yesterday's value + error (y = mx + c)\n",
+    "            - Theory : The next value should retain some information from the previous VALUE\n",
+    "            - todays value = mean + co-efficient * yesterday's value + noise(y = mx + c)\n",
     "            - co-efficient = phi. Negative phi = mean reversion, positive phi = momentum\n",
-    "            - phi = 0 for random walk (high autocorrelation) , phi = 1 for white noise (no autocorrelation) , -1 < phi < +1 for stationary series\n",
+    "            - -1 < phi < +1 for stationary series\n",
+    "            - phi = 1 for random walk (high autocorrelation) , phi = 0 for white noise (no autocorrelation) , \n",
     "            - autocorrelation decays exponentially at a rate of phi\n",
-    "        1. MA model : todays value = mean + co-efficient * yesterday's value + error\n",
-    "            - todays value = mean + co-efficient * yesterday's value + error (y = mx + c)\n",
+    "        1. MA model : \n",
+    "            - Theory: The next value should retain some information from the previous NOISE\n",
+    "            - todays value = mean + co-efficient * yesterday's noise + today's noise (y = mx + c)\n",
+    "            - co-efficient = theta. Negative theta = mean reversion, positive theta = momentum\n",
+    "            - stationary for all values of co-efficient, theta\n",
+    "            - theta = 1 for random walk (high autocorrelation) , theta = 0 for white noise (no autocorrelation) , \n",
+    "            - autocorrelation decays exponentially at a rate of phi\n",
+    "\n",
     "- Partial auto-correlation : \n",
     "    - incremental benefit of adding another lag\n",
     "    - quantifies how significance adding n-th lag is when there is already (n-1)th lag\n",
-    "- Information Criteria : adjusts penalties on number of parameters in the model. The best model has least AIC or/and BIC model among the peers."
+    "- Information Criteria : adjusts penalties on number of parameters in the model. The best model has least AIC or/and BIC model among the peers.\n",
+    "- Modeling flow:\n",
+    "    1. See if the series is stationary (dicky fuller test, higher p-value means non-stationary)\n",
+    "    2. take difference / percent change (to make it stationary)\n",
+    "    3. compute ACF and PACF\n",
+    "    4. Fit few AR, MA and ARMA models\n",
+    "    5. compare AIC, BIC to find the best model\n",
+    "    6. Forecast"
    ]
   },
   {
@@ -95,10 +109,10 @@
     "adfuller(df['num_col'])\n",
     "# Pure AR Series generation\n",
     "from statsmodels.tsa.arima_process import ArmaProcess\n",
-    "phi = 0.9\n",
-    "ar = np.array([1, -phi])\n",
-    "ma = np.array([1])\n",
-    "AR_object = ArmaProcess(ar, ma)\n",
+    "phi = 0.9 # or theta for MA\n",
+    "ar_argen, ma_argen = np.array([1, -phi]), np.array([1]) # For pure AR series generation\n",
+    "ar_magen, ma_magen = np.array([1]), np.array([1, theta]) # For pure MA series generation\n",
+    "AR_object = ArmaProcess(ar_gen, ma_gen)\n",
     "simulated_data = AR_object.generate_sample(nsample=1000)\n",
     "plt.plot(simulated_data)\n",
     "# ARIMA modeling \n",
@@ -296,6 +310,69 @@
    "metadata": {},
    "source": [
     "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MA with multiple lags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of theta on Autocorrelation of MA(1) model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AR model can be converted to MA model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ARMA Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
   {
